--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi página web</title>
 </head>
 <body>
-    
-</body>
+    <div>
+        <h1>CR7 2018>>></h1>
+        <img src="https://c.files.bbci.co.uk/5985/production/_102471922_gettyimages-962792890.jpg">
+    </div>
+    </body>
 </html>
