--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mi página web</title>
 </head>
 <body>
-    <div>
+    <div style="text-align: center;">
         <h1>CR7 2018>>></h1>
         <img src="https://c.files.bbci.co.uk/5985/production/_102471922_gettyimages-962792890.jpg">
     </div>
